feat: intégration complète du contenu des sections dossiers (whoami, projects, blog, contact)+css de base

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     />
     <meta
       property="og:image"
-      content="https://opengraph.b-cdn.net/production/images/a25b2f35-db9d-4b50-b949-ab29db297092.png?token=oPX6LDvuWvhTq3HN0xC17tYJrtN88ad408sj_3gTOYE&height=604&width=1200&expires=33283240443"
+      content="https://jhauck67.github.io/jhauck67/assets/sketch/opengraph.png"
     />
 
     <!-- Twitter Meta Tags -->
@@ -85,7 +85,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://opengraph.b-cdn.net/production/images/a25b2f35-db9d-4b50-b949-ab29db297092.png?token=oPX6LDvuWvhTq3HN0xC17tYJrtN88ad408sj_3gTOYE&height=604&width=1200&expires=33283240443"
+      content="https://jhauck67.github.io/jhauck67/assets/sketch/opengraph.png"
     />
 
     <!-- ------------------------ Feuille de style CSS ------------------------- -->
@@ -189,17 +189,71 @@
             <span class="sr-only">A propos de moi</span>
           </h2>
           <div class="folder-content">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet
-              optio delectus, autem cupiditate rem iste modi, placeat laborum
-              dolorum quidem ullam, sunt eos ut dignissimos natus a nulla fugit
-              sapiente libero. Natus soluta veritatis quidem similique, nam
-              ducimus, enim quas accusamus minima voluptate error dignissimos
-              libero architecto recusandae amet aliquam.
-            </p>
+            <div class="screen">
+              <p>Fichier trouvé : <span class="pre">README.md</span></p>
+              <div class="markdown">
+                <div class="paragraph">
+                  <p>Nom : Jennifer</p>
+                  <p>Alias : jhauck67</p>
+                  <p>Métier : Conductrice de train</p>
+                  <p>Système d'exploitation : Café + Curiosité</p>
+                  <p>Langages : HTML, CSS et un soupçon de JS</p>
+                </div>
+                <div class="separator">---</div>
+                <div class="paragraph">
+                  <p>
+                    Je découvre le développement web petit à petit — une
+                    transition entre les rails du monde physique et les lignes
+                    de code du monde numérique.
+                  </p>
+                  <p>
+                    J’avance à mon rythme (et souvent tard le soir), avec
+                    l’envie de comprendre comment les choses fonctionnent
+                    <em>sous le capot</em>.
+                  </p>
+                </div>
+                <div class="paragraph">
+                  <p>
+                    Mon parcours est peut-être atypique, mais il m’a appris à
+                    être rigoureuse, réactive, et autonome.
+                  </p>
+                  <p>
+                    Et spoiler : ça aide aussi quand le train s’arrête au milieu
+                    de nulle part 👀
+                  </p>
+                </div>
+                <div class="paragraph">
+                  <p>Ce terminal est mon terrain de jeu. Tu y trouveras :</p>
+                  <ul>
+                    <!-- !Mettre le lien vers les projets -->
+                    <li>
+                      <a href="#">- Mes projets</a>
+                      <p>(plus ou moins terminés mais 100% faits maison)</p>
+                    </li>
+                    <!-- !Mettre le lien vers le blog -->
+                    <li>
+                      <a href="#">- Mes notes techniques</a>
+                      <p>, triées par tags</p>
+                    </li>
+                    <li>
+                      <a href="#">- Quelques idées pour la suite</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="separator">---</div>
+                <div class="paragraph">
+                  <p>
+                    🛠️ <strong>En chantier</strong> : une version interactive,
+                    avec plus de fonctionnalités. Mais pour l’instant, clique
+                    sur un dossier pour continuer l’exploration.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
+      <!-- Section "ls projetcs" -->
       <section id="projects">
         <input type="radio" name="accordeon" id="second" />
         <div class="folder">
@@ -208,17 +262,90 @@
             <span class="sr-only">Mes projets</span>
           </h2>
           <div class="folder-content">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet
-              optio delectus, autem cupiditate rem iste modi, placeat laborum
-              dolorum quidem ullam, sunt eos ut dignissimos natus a nulla fugit
-              sapiente libero. Natus soluta veritatis quidem similique, nam
-              ducimus, enim quas accusamus minima voluptate error dignissimos
-              libero architecto recusandae amet aliquam.
-            </p>
+            <div class="screen">
+              <div class="paragraph">
+                <p>Contenu du dossier <span class="pre">projects/</span> :</p>
+                <ul>
+                  <!-- !Mettre les liens vers projets -->
+                  <li><a href="#">📁 integrations/</a></li>
+                  <li><a href="#">📁 interactions/</a></li>
+                  <li><a href="#">📁 experiments/</a></li>
+                  <li><a href="#">📁 apps/</a></li>
+                </ul>
+                <div class="markdown">
+                  <div class="paragraph">
+                    <h3>📁 <a href="#">integrations/</a></h3>
+                    <p>Maquettes intégrées à la main, ligne par ligne.</p>
+                    <p>
+                      Pixel-perfect (ou presque) et responsive, comme les devs
+                      de l'ancien temps.
+                    </p>
+                    <p>
+                      Tu y trouveras mes exercices de fidélité visuelle :
+                      reproduction de designs, sites fictifs, et autres
+                      entraînements front-end <strong>sans filet</strong> (ni
+                      framework, ni JS).
+                    </p>
+                    <p class="status">
+                      &gt; Statut : stable & alimenté régulièrement
+                    </p>
+                  </div>
+                  <div class="separator">---</div>
+                  <div class="paragraph">
+                    <h3>📁 <a href="#">interactions/</a></h3>
+                    <p>Premier contact avec la Force… de JavaScript ✨</p>
+                    <p>
+                      Ici, je m’amuse à rendre les interfaces un peu plus
+                      vivantes : menus qui s’ouvrent, contenus qui s’affichent,
+                      boutons qui font des trucs.
+                    </p>
+                    <p>
+                      Tout en vanilla JS, parce qu’il faut bien apprendre à
+                      marcher avant de sauter dans React.
+                    </p>
+                    <p class="status">
+                      &gt; Statut : en cours d’électrification
+                    </p>
+                  </div>
+                  <div class="separator">---</div>
+                  <div class="paragraph">
+                    <h3>📁 <a href="#">experiments/</a></h3>
+                    <p>Labo secret. Zone de tests.</p>
+                    <p>
+                      Ce dossier contient mes projets <em>un peu chelous</em>,
+                      mes animations faites à la sueur du keyframe, et tout ce
+                      qui ne rentrait dans aucune case.
+                    </p>
+                    <p>
+                      Style ? Terminal simulé, glitchs CSS, CV interactif, ou
+                      effets de texte qui clignotent (mais avec goût, hein).
+                    </p>
+                    <p class="status">&gt; Statut : instable mais marrant</p>
+                  </div>
+                  <div class="separator">---</div>
+                  <div class="paragraph">
+                    <h3>📁 <a href="#">apps/</a></h3>
+                    <p>Pour l’instant, c’est un dossier vide… ou presque.</p>
+                    <p>
+                      Mais un jour, il contiendra des <em>vraies</em> apps
+                      front-end : des trucs avec des appels API, de la logique
+                      utilisateur, du stockage local, etc.
+                    </p>
+                    <p>
+                      Bref, ce dossier est un peu comme une promesse. (Ou une
+                      TODO.)
+                    </p>
+                    <p class="status">
+                      &gt; Statut : 💡 idée en cours de chargement
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
+      <!-- Section "blog" -->
       <section id="blog">
         <input type="radio" name="accordeon" id="third" />
         <div class="folder">
@@ -227,17 +354,39 @@
             <span class="sr-only">Journal de bord du dev web</span>
           </h2>
           <div class="folder-content">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet
-              optio delectus, autem cupiditate rem iste modi, placeat laborum
-              dolorum quidem ullam, sunt eos ut dignissimos natus a nulla fugit
-              sapiente libero. Natus soluta veritatis quidem similique, nam
-              ducimus, enim quas accusamus minima voluptate error dignissimos
-              libero architecto recusandae amet aliquam.
-            </p>
+            <div class="screen">
+              <p>
+                Aucun fichier pour l’instant, mais le dossier est prêt à
+                accueillir des logs.
+              </p>
+              <div class="paragraph">
+                <p>Ici, je compilerai mes aventures en développement web :</p>
+                <p>
+                  HTML trop verbeux, CSS capricieux, Git qui fait la tête, Figma
+                  qui s’ouvre lentement, et JavaScript qui fait… du JavaScript.
+                </p>
+              </div>
+              <div class="paragraph">
+                <p>
+                  Bref : un journal honnête et désorganisé de ce que j’apprends,
+                  teste, ou démonte (par erreur) en construisant des projets.
+                </p>
+                <p>
+                  Une sorte de mémoire vive personnelle, et peut-être un peu
+                  collective aussi.
+                </p>
+              </div>
+              <div class="citation">
+                <p>
+                  &gt; À suivre : <span class="pre">log_001.md</span> — dès que
+                  j’arrête de réorganiser mes dossiers…
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
+      <!-- Section "contact" -->
       <section id="contact">
         <input type="radio" name="accordeon" id="fourth" />
         <div class="folder">
@@ -246,14 +395,86 @@
             <span class="sr-only">Me contacter</span>
           </h2>
           <div class="folder-content">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet
-              optio delectus, autem cupiditate rem iste modi, placeat laborum
-              dolorum quidem ullam, sunt eos ut dignissimos natus a nulla fugit
-              sapiente libero. Natus soluta veritatis quidem similique, nam
-              ducimus, enim quas accusamus minima voluptate error dignissimos
-              libero architecto recusandae amet aliquam.
-            </p>
+            <div class="screen">
+              <div class="paragraph">
+                <p>
+                  Pas de backend ici, juste un formulaire pour faire joli. Mais
+                  si tu veux vraiment me contacter, voici ce qu’il faut savoir :
+                </p>
+                <p>
+                  Tu peux remplir le formulaire qui ne fera rien, ou simplement
+                  m'envoyer un message à l’adresse ci-dessous. 🤖
+                </p>
+              </div>
+              <div class="separator">---</div>
+              <div class="paragraph">
+                <p><strong>📧 Email :</strong></p>
+                <!-- ! Remplir l'email -->
+                <p>
+                  Tu peux m’écrire à
+                  <a href="mailto:jennifer@example.com">jennifer@example.com</a
+                  >, je serai ravie de te répondre (sauf si je suis en train de
+                  déboguer, dans ce cas je vais probablement oublier de manger).
+                </p>
+              </div>
+              <div class="paragraph">
+                <p><strong>📱 Réseaux sociaux :</strong></p>
+                <p>
+                  Je suis aussi sur les plateformes sociales, si tu veux
+                  échanger, partager des memes, ou me poser des questions sur le
+                  code.
+                </p>
+                <ul>
+                  <!-- ! Remplir le lien github -->
+                  <li><a href="#">GitHub</a></li>
+                  <!-- ! Remplir le lien linkedin -->
+                  <li><a href="#">Linkedin</a></li>
+                  <!-- ! Remplir le lien codepen -->
+                  <li><a href="#">Codepen</a></li>
+                </ul>
+              </div>
+              <div class="separator">---</div>
+              <div class="citation">
+                <p>
+                  <strong>Disclaimer</strong>: Si tu veux vraiment utiliser le
+                  formulaire, c’est cool aussi. Je t’avertis juste qu’il est…
+                  plus décoratif que fonctionnel pour l’instant. 😜
+                </p>
+              </div>
+              <div class="separator">---</div>
+              <form action="">
+                <label for="name">Nom :</label>
+                <input
+                  type="text"
+                  name="name"
+                  id="name"
+                  autocomplete="name"
+                  placeholder="Ton nom ici"
+                />
+                <label for="email">Email :</label>
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  autocomplete="email"
+                  placeholder="ton@email.com"
+                />
+                <label for="message">Message :</label>
+                <textarea
+                  name="message"
+                  id="message"
+                  placeholder="Ton message ici..."
+                ></textarea>
+                <input type="checkbox" name="submit" id="submit" />
+                <label for="submit" id="submit-button"
+                  >Envoyer le message</label
+                >
+                <p class="confirmation-message">
+                  Merci pour ton message ! Je reviendrai vers toi… dès que je
+                  trouve comment ça marche. 😉
+                </p>
+              </form>
+            </div>
           </div>
         </div>
       </section>
