📱Amélioration du responsive

--- a/index.html
+++ b/index.html
@@ -159,58 +159,60 @@
               <div class="markdown">
                 <!-- Fiche de présentation -->
                 <div class="paragraph">
-                  <p>Nom : Jennifer</p>
-                  <p>Alias : jhauck67</p>
-                  <p>Métier : Conductrice de train</p>
-                  <p>Système d'exploitation : Café + Curiosité</p>
-                  <p>Langages : HTML, CSS et un soupçon de JS</p>
+                  <p class="code">Nom : Jennifer</p>
+                  <p class="code">Alias : jhauck67</p>
+                  <p class="code">Métier : Conductrice de train</p>
+                  <p class="code">Système d'exploitation : Café + Curiosité</p>
+                  <p class="code">Langages : HTML, CSS et un soupçon de JS</p>
                 </div>
                 <div class="separator">---</div>
                 <!-- Petite introduction -->
                 <div class="paragraph">
-                  <p>
+                  <p class="code">
                     Je découvre le développement web petit à petit — une transition entre les rails
                     du monde physique et les lignes de code du monde numérique.
                   </p>
-                  <p>
+                  <p class="code">
                     J’avance à mon rythme (et souvent tard le soir), avec l’envie de comprendre
                     comment les choses fonctionnent
-                    <em>sous le capot</em>
-                    .
+                    <em>sous le capot.</em>
                   </p>
                 </div>
                 <div class="paragraph">
-                  <p>
+                  <p class="code">
                     Mon parcours est peut-être atypique, mais il m’a appris à être rigoureuse,
                     réactive, et autonome.
                   </p>
-                  <p>
+                  <p class="code">
                     Et spoiler : ça aide aussi quand le train s’arrête au milieu de nulle part 👀
                   </p>
                 </div>
                 <div class="paragraph">
-                  <p>Ce terminal est mon terrain de jeu. Tu y trouveras :</p>
+                  <p class="code">Ce terminal est mon terrain de jeu. Tu y trouveras :</p>
                   <ul>
                     <!--TODO Mettre le lien vers les projets -->
                     <li>
-                      <a href="#">- Mes projets</a>
-                      <p>(plus ou moins terminés mais 100% faits maison)</p>
+                      <p class="code">-</p>
+                      <a href="#" class="code">Mes projets</a>
+                      <p class="code">(plus ou moins terminés mais 100% faits maison)</p>
                     </li>
                     <!--TODO Mettre le lien vers le blog -->
                     <li>
-                      <a href="#">- Mes notes techniques</a>
-                      <p>, triées par tags</p>
+                      <p class="code">-</p>
+                      <a href="#" class="code">Mes notes techniques,</a>
+                      <p class="code">triées par tags</p>
                     </li>
                     <!--TODO Mettre le lien vers le blog -->
                     <li>
-                      <a href="#">- Quelques idées pour la suite</a>
+                      <p class="code">-</p>
+                      <a href="#" class="code">Quelques idées pour la suite</a>
                     </li>
                   </ul>
                 </div>
                 <div class="separator">---</div>
                 <!-- Amélioration(s) à venir -->
                 <div class="paragraph">
-                  <p>
+                  <p class="code">
                     🛠️
                     <strong>En chantier</strong>
                     : une version interactive, avec plus de fonctionnalités. Mais pour l’instant,
@@ -242,10 +244,22 @@
                 </p>
                 <ul>
                   <!--TODO Mettre les liens vers projets -->
-                  <li><a href="#">📁 integrations/</a></li>
-                  <li><a href="#">📁 interactions/</a></li>
-                  <li><a href="#">📁 experiments/</a></li>
-                  <li><a href="#">📁 apps/</a></li>
+                  <li>
+                    📁
+                    <a href="#">integrations/</a>
+                  </li>
+                  <li>
+                    📁
+                    <a href="#">interactions/</a>
+                  </li>
+                  <li>
+                    📁
+                    <a href="#">experiments/</a>
+                  </li>
+                  <li>
+                    📁
+                    <a href="#">apps/</a>
+                  </li>
                 </ul>
                 <div class="markdown">
                   <div class="paragraph">
@@ -390,10 +404,9 @@
               <div class="separator">---</div>
               <div class="paragraph">
                 <p><strong>📧 Email :</strong></p>
-                <!--TODO Remplir l'email -->
                 <p>
                   Tu peux m’écrire à
-                  <a href="mailto:jennifer@example.com">jennifer@example.com</a>
+                  <a href="mailto:jenniferhauck2017@gmail.com">jenniferhauck2017@gmail.com</a>
                   , je serai ravie de te répondre (sauf si je suis en train de déboguer, dans ce cas
                   je vais probablement oublier de manger).
                 </p>
@@ -405,12 +418,24 @@
                   memes, ou me poser des questions sur le code.
                 </p>
                 <ul>
-                  <!--TODO Remplir le lien github -->
-                  <li><a href="#">GitHub</a></li>
-                  <!--TODO Remplir le lien linkedin -->
-                  <li><a href="#">Linkedin</a></li>
-                  <!--TODO Remplir le lien codepen -->
-                  <li><a href="#">Codepen</a></li>
+                  <li>
+                    <a href="https://github.com/jhauck67" aria-label="Suivez-moi sur GitHub">
+                      GitHub
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/in/jennifer-hauck-b125252a2/"
+                      aria-label="Suivez-moi sur Linkedin"
+                    >
+                      Linkedin
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://codepen.io/jhauck67" aria-label="Suivez-moi sur CodePen">
+                      Codepen
+                    </a>
+                  </li>
                 </ul>
               </div>
               <div class="separator">---</div>
