--- a/index.html
+++ b/index.html
@@ -190,22 +190,37 @@
                 <div class="paragraph">
                   <p class="code">Ce terminal est mon terrain de jeu. Tu y trouveras :</p>
                   <ul>
-                    <!--TODO Mettre le lien vers les projets -->
                     <li>
                       <p class="code">-</p>
-                      <a href="#" class="code">Mes projets</a>
+                      <a
+                        href="https://jhauck67.github.io/Sandbox-Station/"
+                        class="code"
+                        target="_blank"
+                      >
+                        Mes projets
+                      </a>
                       <p class="code">(plus ou moins terminés mais 100% faits maison)</p>
                     </li>
-                    <!--TODO Mettre le lien vers le blog -->
                     <li>
                       <p class="code">-</p>
-                      <a href="#" class="code">Mes notes techniques,</a>
+                      <a
+                        href="https://jhauck67.github.io/Memory-Station/"
+                        class="code"
+                        target="_blank"
+                      >
+                        Mes notes techniques,
+                      </a>
                       <p class="code">triées par tags</p>
                     </li>
-                    <!--TODO Mettre le lien vers le blog -->
                     <li>
                       <p class="code">-</p>
-                      <a href="#" class="code">Quelques idées pour la suite</a>
+                      <a
+                        href="https://jhauck67.github.io/Memory-Station/"
+                        class="code"
+                        target="_blank"
+                      >
+                        Quelques idées pour la suite
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -243,30 +258,36 @@
                   :
                 </p>
                 <ul>
-                  <!--TODO Mettre les liens vers projets -->
                   <li>
                     📁
-                    <a href="#">integrations/</a>
+                    <a href="https://jhauck67.github.io/Sandbox-Station/" target="_blank">
+                      integrations/
+                    </a>
                   </li>
                   <li>
                     📁
-                    <a href="#">interactions/</a>
+                    <a href="https://jhauck67.github.io/Sandbox-Station/" target="_blank">
+                      interactions/
+                    </a>
                   </li>
                   <li>
                     📁
-                    <a href="#">experiments/</a>
+                    <a href="https://jhauck67.github.io/Sandbox-Station/" target="_blank">
+                      experiments/
+                    </a>
                   </li>
                   <li>
                     📁
-                    <a href="#">apps/</a>
+                    <a href="https://jhauck67.github.io/Sandbox-Station/" target="_blank">apps/</a>
                   </li>
                 </ul>
                 <div class="markdown">
                   <div class="paragraph">
-                    <!--TODO Mettre le lien vers projets -->
                     <h3>
                       📁
-                      <a href="#">integrations/</a>
+                      <a href="https://jhauck67.github.io/Sandbox-Station/" target="_blank">
+                        integrations/
+                      </a>
                     </h3>
                     <p>Maquettes intégrées à la main, ligne par ligne.</p>
                     <p>
@@ -282,10 +303,11 @@
                   </div>
                   <div class="separator">---</div>
                   <div class="paragraph">
-                    <!--TODO Mettre le lien vers projets -->
                     <h3>
                       📁
-                      <a href="#">interactions/</a>
+                      <a href="https://jhauck67.github.io/Sandbox-Station/" target="_blank">
+                        interactions/
+                      </a>
                     </h3>
                     <p>Premier contact avec la Force… de JavaScript ✨</p>
                     <p>
@@ -300,10 +322,11 @@
                   </div>
                   <div class="separator">---</div>
                   <div class="paragraph">
-                    <!--TODO Mettre le lien vers projets -->
                     <h3>
                       📁
-                      <a href="#">experiments/</a>
+                      <a href="https://jhauck67.github.io/Sandbox-Station/" target="_blank">
+                        experiments/
+                      </a>
                     </h3>
                     <p>Labo secret. Zone de tests.</p>
                     <p>
@@ -320,10 +343,11 @@
                   </div>
                   <div class="separator">---</div>
                   <div class="paragraph">
-                    <!--TODO Mettre le lien vers projets -->
                     <h3>
                       📁
-                      <a href="#">apps/</a>
+                      <a href="https://jhauck67.github.io/Sandbox-Station/" target="_blank">
+                        apps/
+                      </a>
                     </h3>
                     <p>Pour l’instant, c’est un dossier vide… ou presque.</p>
                     <p>
@@ -419,7 +443,11 @@
                 </p>
                 <ul>
                   <li>
-                    <a href="https://github.com/jhauck67" aria-label="Suivez-moi sur GitHub">
+                    <a
+                      href="https://github.com/jhauck67"
+                      aria-label="Suivez-moi sur GitHub"
+                      target="_blank"
+                    >
                       GitHub
                     </a>
                   </li>
@@ -427,12 +455,17 @@
                     <a
                       href="https://www.linkedin.com/in/jennifer-hauck-b125252a2/"
                       aria-label="Suivez-moi sur Linkedin"
+                      target="_blank"
                     >
                       Linkedin
                     </a>
                   </li>
                   <li>
-                    <a href="https://codepen.io/jhauck67" aria-label="Suivez-moi sur CodePen">
+                    <a
+                      href="https://codepen.io/jhauck67"
+                      aria-label="Suivez-moi sur CodePen"
+                      target="_blank"
+                    >
                       Codepen
                     </a>
                   </li>
