--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- ====== 🔖 [META TAGS PAGE] ====== -->
     <!-- Titre -->
-    <title>Jennifer bidouille le Web – HTML, CSS & clins d’œil geek</title>
+    <title>Jennifer bidouille le Web – HTML, CSS &amp clins d’œil geek</title>
     <!-- Meta Description -->
     <meta
       name="description"
@@ -299,7 +299,7 @@
                       <strong>sans filet</strong>
                       (ni framework, ni JS).
                     </p>
-                    <p class="status">&gt; Statut : stable & alimenté régulièrement</p>
+                    <p class="status">&gt; Statut : stable &amp alimenté régulièrement</p>
                   </div>
                   <div class="separator">---</div>
                   <div class="paragraph">
