Essai de résolution bug chargement style dans safari !

--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
 
     <!-- ====== 🎨 [FEUILLE DE STYLE CSS] ====== -->
     <!-- Précharger la feuille de style css -->
+    <link rel="preload" href="./assets/styles/variables.css" as="style" />
     <link rel="preload" href="./assets/styles/style.css" as="style" />
     <link rel="preload" href="./assets/styles/intro.css" as="style" />
     <!-- Lien vers la feuille de style css -->
+    <link rel="stylesheet" href="./assets/styles/variables.css" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
     <link rel="stylesheet" href="./assets/styles/intro.css" />
   </head>
